# BK_Randomizer

./: .gitignore  .pre-commit-config.yaml  Banjo-Kazooie_Randomizer.py  Progression_GUI.py  User_GUI.py  pyproject.toml
Randomization_Processes/: BK_Checksum.py  CRC_Tool.py  Clean_Up.py  Common_Functions.py  Compress_Functions.py  Decompress_Functions.py  Progression_GUI.py  Setup_Functions.py  User_GUI.py  __init__.py  pathhelper.py
Randomization_Processes/Dicts_And_Lists/: Enemies.py  Flagged_Object_Flags.py  Flagged_Objects.py  Game_Engine.py  In_World_Warps.py  In_World_Warps_Test.py  Misc_Dicts_And_Lists.py  Model_Dict.py  Non_Flagged_Objects.py  Object_Properties.py  Sequences.py  Setups.py  Structs.py  Warps.py  World_Order_Warps.py
Randomization_Processes/Misc_Manipulation/: Misc_Manipulation_Main.py  __init__.py
Randomization_Processes/Misc_Manipulation/Game_Engine_Data/: Game_Engine_Main.py
Randomization_Processes/Misc_Manipulation/Model_Data/: BK_Models.py  Generic_Models.py  Jinjo_Models.py
Randomization_Processes/Misc_Manipulation/Models_Animations_Properties/: Animation_Main.py  Models_Animations_Properties_Main.py  Properties_Main.py  Swap_Models_Main.py
Randomization_Processes/Misc_Manipulation/Music_Data/: Music_Main.py
Randomization_Processes/Misc_Manipulation/Speech_Data/: Speech_File.py  Speech_Main.py
Randomization_Processes/World_Manipulation/: Generic_Setup_File.py  Generic_World.py  World_Manipulation_Main.py  __init__.py
bkrando/: chunk.py  globals.py  gznative.py  romdata.py  utils.py
tests/: test_chunkman.py  test_gznative.py
(+5 files in other folders)
