[tool.poetry]
name = "bk-randomizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
